--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -83,15 +83,7 @@
                                             <span>Tel</span>
                                         </td>
                                         <td class="text-right">
-                                            <span t-field="o.eq_contact_person_id.phone"/>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <span>Fax</span>
-                                        </td>
-                                        <td class="text-right">
-                                            <span t-field="o.eq_contact_person_id.fax"/>
+                                            <span t-field="o.eq_contact_person_id.work_phone"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -99,7 +91,7 @@
                                             <span>E-Mail</span>
                                         </td>
                                         <td class="text-right">
-                                            <span t-field="o.eq_contact_person_id.login"/>
+                                            <span t-field="o.eq_contact_person_id.work_email"/>
                                         </td>
                                     </tr>
                                 </tbody>
