Update Equitania Erweiterungspaket Neu: Equitania Mail Extensions Neu: Skripte zur Serviervorbereitung, Installation, Update sowie Backup und Restore von Datenbanken.

--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -57,7 +57,7 @@
                                             <span>Bestelldatum</span>
                                         </td>
                                         <td class="text-right">
-                                            <span t-esc="o.date_order.split(' ')[0]"/>
+                                            <span t-esc="o.date_order.split(' ')[0].split('-')[2] + '.' + o.date_order.split(' ')[0].split('-')[1] + '.' + o.date_order.split(' ')[0].split('-')[0]"/>
                                         </td>
                                     </tr>
                                     <tr>
