--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -180,10 +180,10 @@
                             <table class="table table-condensed" rules="none" style="border: 1px solid #999999;">
                                 <thead>
                                     <tr><!-- class="border-black"-->
-                                        <td class="text-right">
+                                        <td class="text-right" id="price_netto">
                                             <strong>Preis Netto</strong>
                                         </td>
-                                        <td class="text-right">
+                                        <td class="text-right" t-if="o.invoice_line[0].invoice_line_tax_id">
                                             <strong>
                                                 <span t-esc="', '.join(map(lambda x: x.name, o.invoice_line[0].invoice_line_tax_id))"/>
                                             </strong>
@@ -195,10 +195,10 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td class="text-right">
+                                        <td class="text-right" id="price_netto_amount">
                                             <span t-field="o.amount_untaxed" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                                         </td>
-                                        <td class="text-right">
+                                        <td class="text-right" t-if="o.invoice_line[0].invoice_line_tax_id">
                                             <span t-field="o.amount_tax" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                                         </td>
                                         <td class="text-right">                                            
