--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -50,7 +50,7 @@
                                             <span>Kundennummer</span>
                                         </td>
                                         <td class="text-right">
-                                            <span t-field="o.partner_id.ref" id="eq_customer_ref"/>
+                                            <span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -195,10 +195,10 @@
                             <table class="table" rules="none" style=" border: 1px solid #999999;">
                                 <thead>
                                     <tr><!-- class="border-black"-->
-                                        <td class="text-right">
+                                        <td class="text-right" id="price_netto">
                                             <strong>Preis Netto</strong>
                                         </td>
-                                        <td class="text-right">
+                                        <td class="text-right" t-if="o.order_line[0].tax_id">
                                             <strong>
                                                 <span t-esc="', '.join(map(lambda x: x.name, o.order_line[0].tax_id))"/>
                                             </strong>
@@ -210,10 +210,10 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td class="text-right">
+                                        <td class="text-right" id="price_netto_amount">
                                             <span t-field="o.amount_untaxed" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
                                         </td>
-                                        <td class="text-right">
+                                        <td class="text-right" t-if="o.order_line[0].tax_id">
                                             <span t-field="o.amount_tax" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
                                         </td>
                                         <td class="text-right">
