--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -245,7 +245,7 @@
                         </div>
                         <table class="col-xs-3" style="width:auto!important; max-width:50%;">
                             <tbody>
-                                <tr>
+                                <tr t-if="o.payment_term_id">
                                     <td style="padding-right:0.5cm;">
                                         Zahlungsbedingung:
                                     </td>
@@ -261,19 +261,19 @@
                                         <span t-field="o.incoterm_id.name"/>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr t-if="o.minimum_planned_date">
                                     <td style="padding-right:0.5cm;">
                                         Vereinbarter Liefertermin:
                                     </td>
                                     <td>
-                                        <span t-field="o.minimum_planned_date"/>
+                                    	<span t-esc="o.minimum_planned_date.split(' ')[0].split('-')[2] + '.' + o.minimum_planned_date.split(' ')[0].split('-')[1] + '.' + o.minimum_planned_date.split(' ')[0].split('-')[0]"/>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td style="padding-right:0.5cm;">
+                                <tr t-if="o.notes">
+                                    <td style="padding-right:0.5cm; vertical-align:top;">
                                         Kommentar:
                                     </td>
-                                    <td>
+                                    <td styles=" vertical-align:top;">
                                         <p t-field="o.notes"/>
                                     </td>
                                 </tr>
