--- a/equitania/views/eq_report_purchase_quotation.xml
+++ b/equitania/views/eq_report_purchase_quotation.xml
@@ -109,9 +109,9 @@
                         <tbody>
                             <tr t-foreach="o.order_line" t-as="order_line">
                                 <td>
-                                    <strong><span t-field="o.order_line.product_id.name"/></strong>
+                                    <strong><span t-field="order_line.product_id.name"/></strong>
                                     <br/>
-                                    <span t-field="o.order_line.product_id.description_sale"/>
+                                    <span t-field="order_line.product_id.description_sale"/>
                                 </td>
                                 <td class="text-center">
                                     <span t-field="order_line.date_planned"/>
@@ -126,7 +126,7 @@
                     <div>
                         <table style="width:auto!important; max-width:50%;">
                             <tbody>
-                                <tr>
+                                <tr t-if="o.payment_term_id">
                                     <td style="padding-right:0.5cm;">
                                         Zahlungsbedingung:
                                     </td>
@@ -142,19 +142,19 @@
                                         <span t-field="o.incoterm_id.name"/>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr t-if="o.minimum_planned_date">
                                     <td style="padding-right:0.5cm;">
                                         Vereinbarter Liefertermin:
                                     </td>
                                     <td>
-                                        <span t-field="o.minimum_planned_date"/>
+                                    	<span t-esc="o.minimum_planned_date.split(' ')[0].split('-')[2] + '.' + o.minimum_planned_date.split(' ')[0].split('-')[1] + '.' + o.minimum_planned_date.split(' ')[0].split('-')[0]"/>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td style="padding-right:0.5cm;">
+                                <tr t-if="o.notes">
+                                    <td style="padding-right:0.5cm; vertical-align:top;">
                                         Kommentar:
                                     </td>
-                                    <td>
+                                    <td styles=" vertical-align:top;">
                                         <p t-field="o.notes"/>
                                     </td>
                                 </tr>
