--- a/equitania/views/eq_footer.xml
+++ b/equitania/views/eq_footer.xml
@@ -4,7 +4,7 @@
 <template id="report.external_layout_footer">
     <div class="footer">
         <table class="header" style="border-bottom: 1px solid #999999; width: 100%">
-            <tr >
+            <tr>
                 <td style="text-align:right;font-size:8pt; font-weight:bold;">Seite
                     
                     
@@ -26,7 +26,10 @@
                 <td style="">
                     <span t-field="company.website"/>
                 </td>
-                <td style="">Geschäftsführer</td>
+                <td style="">
+                    <div t-if="company.eq_custom_1 or company.eq_custom_2">Geschäftsführer</div>
+                    
+                </td>
                 <td rowspan="3" width="40" style="margin:0; padding:0;" margin="0" padding="0">
                     <div id="version">Version 1.34
                         <br/>13.05.2014
@@ -43,11 +46,15 @@
                 <td style="">
                     <span t-field="company.street"/>
                 </td>
-                <td style="">Tel: 
-                    <span t-field="company.phone"/>
+                <td style="">
+                    <div t-if="company.phone">
+                        Tel: <span t-field="company.phone"/>
+                    </div>
                 </td>
-                <td style="">USt-IdNr. 
-                    <span t-field="company.vat"/>
+                <td style="">
+                    <div t-if="company.vat">
+                        USt-IdNr. <span t-field="company.vat"/>
+                    </div>
                 </td>
                 <td style="">
                     <span t-field="company.eq_custom_1"/>
@@ -63,8 +70,10 @@
                     <span t-field="company.zip"/>
                     <span t-field="company.city"/>
                 </td>
-                <td style="">Fax: 
-                    <span t-field="company.fax"/>
+                <td style="">
+                    <div t-if="company.fax">
+                        Fax: <span t-field="company.fax"/>
+                    </div>
                 </td>
                 <td style="">
                     <span t-field="company.company_registry"/>
