--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -193,7 +193,9 @@
                                 <td>
                                     <strong><span t-field="line.product_id.name"/></strong>
                                     <br/>
-                                    <span t-field="line.product_id.description_sale"/>
+                                    <span t-field="line.name"/>
+                                    <br/>
+                                    <strong t-if="o.show_delivery_date">Liefertermin: <span t-field="line.get_delivery_date"/></strong>
                                 </td>
                                 <td class="text-right">
                                     <span t-field="line.product_qty"/>
