--- a/equitania/views/eq_report_purchase_quotation.xml
+++ b/equitania/views/eq_report_purchase_quotation.xml
@@ -40,6 +40,14 @@
                                             <span t-field="o.name"/>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>
+                                            <span>Unsere Referenznummer</span>
+                                        </td>
+                                        <td class="text-right">
+                                            <span t-field="o.partner_ref"/>
+                                        </td>
+                                    </tr>
                                     <tr t-if="o.origin">
                                         <td>
                                             <span>Ihre Nachricht.</span>
@@ -140,14 +148,6 @@
                                     </td>
                                     <td>
                                         <span t-field="o.incoterm_id.name"/>
-                                    </td>
-                                </tr>
-                                <tr t-if="o.minimum_planned_date">
-                                    <td style="padding-right:0.5cm;">
-                                        Vereinbarter Liefertermin:
-                                    </td>
-                                    <td>
-                                    	<span t-esc="o.minimum_planned_date.split(' ')[0].split('-')[2] + '.' + o.minimum_planned_date.split(' ')[0].split('-')[1] + '.' + o.minimum_planned_date.split(' ')[0].split('-')[0]"/>
                                     </td>
                                 </tr>
                                 <tr t-if="o.notes">
