--- a/equitania/views/eq_report_style.xml
+++ b/equitania/views/eq_report_style.xml
@@ -19,6 +19,10 @@
         padding-left:15px; padding-right:15px;
     }
 
+	.footer {
+		clear:both;
+	}
+
 	.footer td {
 	    margin:0;
 	    padding:0;
