--- a/equitania/views/eq_report_purchase_quotation.xml
+++ b/equitania/views/eq_report_purchase_quotation.xml
@@ -89,7 +89,7 @@
                     </table>
                 </div>
             </div>
-            <h2>Anfrage
+            <h2>Purchase quotation
                 <span t-field="o.name"/>
             </h2>
 			<p t-if="o.eq_head_text" style="margin-bottom:0.3cm!important;"><span t-field="o.eq_head_text"/></p>
