[CHG] Report Übersetzung für Lieferschein (Stockpicking) abgeschlossen

--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -252,6 +252,7 @@
 				</table>
 				<div></div>
 			</div><!-- <p t-field="o.comment"/> -->
+			<div class="oe_structure"/>
         </div>
     </xpath>
 </template>
