[ADD] Added the placeholder div for the agreement number

--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -178,6 +178,7 @@
                             <span t-field="line.name"/>
                             <br/>
                             <strong t-if="o.show_delivery_date">Delivery date: <span t-field="line.get_delivery_date"/></strong>
+                            <div id="agreement_id"/>
                         </td>
                         <td class="text-right">
                             <span t-field="line.product_uom_qty"/>
